--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,34 @@
-<p>header works!</p>
+ <header class="p-3">
+    <div class="container">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        <a href="/" class="header-logo d-flex align-items-center mb-2 mb-lg-0">auto.market</a>
+
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li><a href="#" class="nav-link px-2">Home</a></li>
+          <li><a href="#" class="nav-link px-2">Sell Car</a></li>
+          <li><a href="#" class="nav-link px-2">Buy Car</a></li>
+          <li><a href="#" class="nav-link px-2">Market</a></li>
+          <li><a href="#" class="nav-link px-2">Contact Us</a></li>
+        </ul>
+
+        <a href="#" class="mr-32 hover-black"><i class="fa fa-car"></i></a>
+        <a href="#" class="mr-32 hover-black"><i class="fa fa-star-o"></i></a>
+        <div class="dropdown mr-32">
+            <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="/assets/imgs/avatar.png" alt="mdo" width="32" height="32" class="rounded-circle mr-10">
+                <span class="hover-black">Sami L.</span>
+            
+                <ul class="dropdown-menu text-small ml-16" aria-labelledby="dropdownUser1">
+                    <li><a class="dropdown-item" href="#">New project...</a></li>
+                    <li><a class="dropdown-item" href="#">Settings</a></li>
+                    <li><a class="dropdown-item" href="#">Profile</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Sign out</a></li>
+                </ul>
+            </a>
+        </div>
+        <button type="button" class="pst-ad-btn ca-btn">+ <span>Post ad</span></button>
+
+      </div>
+    </div>
+  </header>
