--- a/src/app/core/component/caritem/caritem.component.scss
+++ b/src/app/core/component/caritem/caritem.component.scss
@@ -18,6 +18,7 @@
     .car-img{
         visibility: visible;
         width: 56%;
+        height: 98px;
         margin: 0 auto;
         position: relative;
         display: block;
